# loreloop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  SUPPORT.md  TODO.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: demo.cast  design-and-implementation.md  multi-repo-and-federation.md  product-thesis-and-evidence.md  troubleshooting.md  usability-study.md
docs/verification/: authoritative-export-v5.md
eval/: README.md  __init__.py  metrics.py  run.py  scale.py  task_runner.py  usability.py  validate_results.py
eval/datasets/: retrieval.json  reverse_truth.json
eval/datasets/reverse_matrix/: matrix.json
eval/datasets/reverse_project/: api.py  auth.py  config.py  test_api_contract.py
eval/results/: 2026-07-10-summary.json  README.md  reverse-claude-2026-07-10.json  reverse-codex-2026-07-10.json  reverse-matrix-claude-2026-07-10.json  scale-2026-07-10.json  task-baselines-claude-2026-07-10.json
eval/tasks/: tasks.json
eval/tasks/csv_export/: hidden_test.py
eval/tasks/rate_limit/: hidden_test.py
eval/tasks/upload_limit/: hidden_test.py
eval/usability/: session-template.json
examples/legacy-upload/: README.md  demo.py
plugins/loreloop/.claude-plugin/: plugin.json
plugins/loreloop/.codex-plugin/: plugin.json
plugins/loreloop/scripts/: install-loreloop.ps1  install-loreloop.sh  install-runtime.ps1  install-runtime.sh
src/knowhelm/: agents.py  cli.py  companion.py  demo.py
src/knowhelm/delegate/: context_pack.py  expand.py  runner.py
src/knowhelm/evidence/: artifacts.py  chain.py
src/knowhelm/federation/: __init__.py  reader.py  registry.py
src/knowhelm/knowledge/: code_reverse.py  endorsement.py  harvest.py  model.py  repos.py  store.py
src/knowhelm/report/: acceptance.py
src/knowhelm/webexplore/: browser.py  explorer.py  verify.py  web_reverse.py
src/loreloop/: agents.py  cli.py  companion.py  demo.py  paths.py  security.py
src/loreloop/delegate/: context_pack.py  runner.py
src/loreloop/evidence/: artifacts.py  chain.py  repository_state.py
src/loreloop/example/: __init__.py
src/loreloop/federation/: __init__.py  reader.py  registry.py
src/loreloop/knowledge/: authoritative_archive.py  authoritative_ast.py  authoritative_ast_render.py  authoritative_bindings.py  authoritative_capsule.py  authoritative_capsule_io.py  authoritative_capsule_render.py  authoritative_capsule_replay.py  authoritative_coverage.py  authoritative_detector_common.py  authoritative_detector_config.py  authoritative_detector_csharp.py  authoritative_detector_database_normalize.py  authoritative_detector_dotnet.py  authoritative_detector_extended.py  authoritative_detector_go.py  authoritative_detector_graphql.py  authoritative_detector_jvm.py  authoritative_detector_markup.py  authoritative_detector_openapi.py  authoritative_detector_platform.py  authoritative_detector_platform_yaml.py  authoritative_detector_prisma.py  authoritative_detector_proto.py  authoritative_detector_python.py  authoritative_detector_python_database.py  authoritative_detector_python_migrations.py  authoritative_documents.py  (+35 more)
tests/: conftest.py  test_authoritative_coverage.py  test_authoritative_export_requirements.py  test_authoritative_export_schema.py  test_authoritative_export_scope.py  test_authoritative_export_secrets.py  test_authoritative_proof_runner.py  test_authoritative_publish.py  test_authoritative_report_normalize.py  test_authoritative_search.py  test_authoritative_semantic_deduplication.py  test_authoritative_semantic_performance.py  test_authoritative_source_scope.py  test_authoritative_trust.py  test_authoritative_web_baseline.py  test_begin_requirements.py  test_cli_capsule_replay.py  test_cli_help.py  test_code_reverse.py  test_delegate.py  test_distribution.py  test_document_archive.py  test_document_ast.py  test_document_ast_pipeline.py  test_document_bindings.py  test_document_capsule.py  test_document_capsule_replay.py  test_document_config_detectors.py  test_document_contract_detectors.py  test_document_database_framework_detectors.py  test_document_detector_matrix.py  test_document_extended_detectors.py  test_document_git_snapshot.py  test_document_human_readability.py  test_document_ids.py  test_document_markup_detector.py  test_document_nested_ast.py  test_document_python_detector.py  test_document_requirement_materials.py  test_document_semantic_core.py  (+27 more)
tests/snapshots/: cli-help.txt
verification/authoritative_export/: run.py
(+42 files in other folders)
