[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowhelm"
version = "0.1.0"
description = "Knowledge-governed cockpit for coding agents: reverse-engineer project knowledge, inject it into Claude Code / Codex runs, and verify results with tamper-evident evidence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "starry-knowhelm contributors" }]
keywords = ["ai", "coding-agent", "knowledge", "claude-code", "codex", "evidence", "acceptance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
web = ["playwright>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
knowhelm = "knowhelm.cli:main"

[project.urls]
Homepage = "https://github.com/starry-knowhelm/starry-knowhelm"

[tool.hatch.build.targets.wheel]
packages = ["src/knowhelm"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
