[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loreloop"
version = "0.1.0"
description = "Knowledge-governed cockpit for coding agents: reverse-engineer project knowledge, inject it into Claude Code / Codex runs, and verify results with tamper-evident evidence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "LoreLoop contributors" }]
keywords = ["ai", "coding-agent", "knowledge", "claude-code", "codex", "evidence", "acceptance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
web = ["playwright>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
loreloop = "loreloop.cli:main"

[project.urls]
Homepage = "https://github.com/loreloop-ai/loreloop"
Repository = "https://github.com/loreloop-ai/loreloop"
Issues = "https://github.com/loreloop-ai/loreloop/issues"
Changelog = "https://github.com/loreloop-ai/loreloop/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/loreloop"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
