[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loreloop"
version = "0.1.0"
description = "Knowledge-governed cockpit for coding agents: reverse-engineer project knowledge, inject it into Claude Code / Codex runs, and verify results with tamper-evident evidence."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.15"
authors = [{ name = "LoreLoop contributors" }]
keywords = ["ai", "coding-agent", "knowledge", "claude-code", "codex", "evidence", "acceptance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
web = ["playwright>=1.55,<2"]
dev = [
    "bandit[toml]>=1.8,<2",
    "build>=1.2,<2",
    "pip-audit>=2.9,<3",
    "pytest>=8,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.15,<0.16",
    "twine>=6,<7",
]

[project.scripts]
loreloop = "loreloop.cli:main"

[project.urls]
Homepage = "https://github.com/zhangguiping-xydt/loreloop"
Repository = "https://github.com/zhangguiping-xydt/loreloop"
Issues = "https://github.com/zhangguiping-xydt/loreloop/issues"
Changelog = "https://github.com/zhangguiping-xydt/loreloop/blob/main/CHANGELOG.md"
Documentation = "https://github.com/zhangguiping-xydt/loreloop#readme"
Security = "https://github.com/zhangguiping-xydt/loreloop/security/policy"

[tool.hatch.build.targets.wheel]
packages = ["src/loreloop"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-config --strict-markers"

[tool.coverage.run]
branch = true
source = ["loreloop"]
omit = ["src/loreloop/example/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
